# topographic-system

./: .eslintrc.cjs  .gitignore  .oxfmtrc.json  .oxlintrc.json  .release-please-manifest.json  CHANGELOG.md  Dockerfile  README.md  Snakefile  fix-schema.sed  nz-topo50-map.json  package-lock.json  package.json  pull_request_template.md  pyproject.toml  qgis_export.py  release-please-config.json  run_dot.bat  tsconfig.base.json  tsconfig.json
.github/: CODEOWNERS  dependabot.yml
.github/actions/python-ci/: action.yml
.github/workflows/: containers.yml  containersOLD.yml  data-review.yml  pull-request-container.yml  push.yml  python-ci.yml  release-please.yml  test-data-review.yml  visual-diff.yml
category_diagrams/: Transport_and_Infrastructure_diagram
docs/: README.md  examples.md  excalidraw.md  index.md  storage.structure.md  usage.md
docs/api/: index.md
e2e/: README.md  common.ts  index.import.ts  index.kart-import.ts  index.ts  tsconfig.json
e2e/assets/: testcarto_text.json  testline.json  testmapsheet.json  testpoint.json  testpolygon.json  testtrig_point.json  topo-legend-1.tif  topo-test.qgs
schema/: AuditFields.json  ProductIdentity.json  TopoIdentity.json  airport.json  bridge_line.json  building.json  building_point.json  coastline.json  coastline_polygon.json  contour.json  descriptive_text.json  fence_line.json  ferry_crossing.json  geographic_name.json  island.json  landcover.json  landcover_line.json  landcover_point.json  landuse.json  landuse_line.json  marine.json  nz_topo50_carto_text.json  nz_topo50_dms_grid.json  nz_topo50_grid.json  nz_topo50_map_sheet.json  nztopo50_carto_text.json  nztopo50_dms_grid.json  nztopo50_grid.json  nztopo50_ice_contour.json  nztopo50_map_sheet.json  nztopo50_rock_line.json  physical_infrastructure_line.json  physical_infrastructure_point.json  place_point.json  railway_line.json  railway_station.json  relief.json  relief_line.json  relief_point.json  residential_area.json  (+20 more)
schema/next/: airport.json  bridge_line.json  building.json  building_point.json  coastline.json  contour.json  descriptive_text.json  fence_line.json  ferry_crossing.json  ferry_line.json  geographic_name.json  island.json  landcover.json  landcover_line.json  landcover_point.json  landuse.json  landuse_line.json  landuse_point.json  marine.json  marine_point.json  nztopo50_carto_text.json  nztopo50_dms_grid.json  nztopo50_grid.json  nztopo50_map_sheet.json  place_point.json  railway_line.json  railway_point.json  railway_station.json  relief.json  relief_line.json  relief_point.json  residential_area.json  road_line.json  runway.json  structure.json  structure_line.json  structure_point.json  track_line.json  transport_point.json  trig_point.json  (+9 more)
src/: bin.ts  index.ts
src/cli/: produce.ts
