[project]
name = "topographic-system"
version = "0.1.0"
description = "A collection of tools for LINZ Topographic Data Management"
authors = [
    { name = "Andrew McMenamin", email = "AMcMenamin@linz.govt.nz" },
    { name = "Tobias Schmidt", email = "tschmidt@linz.govt.nz" },
    { name = "Wentao Kuang", email = "wkuang@linz.govt.nz" },
    { name = "Chris Burlinchon", email = "cburlinchon@linz.govt.nz" },
    { name = "TÄwera Manaena", email = "tmanaena@linz.govt.nz" },
]

requires-python = ">=3.12"
dependencies = [
    "topographic-system-qgis",
    "topographic-system-validation",
#    "topographic_validator",
]

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "ruff",
    "pandas-stubs",
    "types-pytz",
    "types-setuptools",
    "types-geopandas",  # Includes types-shapely as dependency
    ]

[tool.uv.sources]
topographic-system-qgis = { workspace = true }
topographic-system-validation = { workspace = true }
#topographic_validator = { workspace = true }

[tool.uv.workspace]
members = ["packages/qgis", "packages/validation"]
#members = ["packages/qgis", "packages/topographic-validator"]

[[tool.mypy.overrides]]
module = ["qgis.core"]
ignore_missing_imports = true
